--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -31,7 +31,29 @@ jobs:
         push: true
         context: .
         tags: ghcr.io/eedorenko/rancher-hello-world:${{ env.IMAGE_TAG }}, ghcr.io/eedorenko/rancher-hello-world:latest  
+ 
+ 
+  Dploy_To_Dev:
+      runs-on: ubuntu-latest
+      needs: Build_Push_Image
+      environment: dev
+      steps:
+      - name: Read Image Tags
+        run: |
+          echo $IMAGE_TAG 
 
+  Dploy_To_Prod:
+      runs-on: ubuntu-latest
+      needs: Dploy_To_Dev
+      environment: prod
+      steps:
+      - name: Read Image Tags
+        run: |
+          echo $IMAGE_TAG 
+
+      - name: Prepare a package for Zarf 
+        run: |
+          echo $IMAGE_TAG 
 
     # - name: Get Release Number
     #   run: |
