--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -40,6 +40,7 @@ jobs:
       steps:
       - name: Read Image Tags
         run: |
+          echo "IMAGE_TAG=$(cat ${{ github.workspace }}/IMAGE_TAG)" >> $GITHUB_ENV
           echo $IMAGE_TAG 
 
   Dploy_To_Prod:
@@ -49,6 +50,7 @@ jobs:
       steps:
       - name: Read Image Tags
         run: |
+          echo "IMAGE_TAG=$(cat ${{ github.workspace }}/IMAGE_TAG)" >> $GITHUB_ENV
           echo $IMAGE_TAG 
 
       - name: Prepare a package for Zarf 
