--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -25,20 +25,20 @@ jobs:
       run: |
           IMAGE_TAG=${{ secrets.MAJOR_VERSION }}.${{ secrets.MINOR_VERSION }}.${{ secrets.HF_VERSION }}-${{ github.run_number }}
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV          
-          # echo $IMAGE_TAG > $GITHUB_WORKSPACE/IMAGE_TAG
+          echo $IMAGE_TAG > $GITHUB_WORKSPACE/IMAGE_TAG
     - name: Build and Push to Docker Hub
       uses: docker/build-push-action@v2
       with:
         push: true
         context: .
         tags: ghcr.io/eedorenko/rancher-hello-world:${{ env.IMAGE_TAG }}, ghcr.io/eedorenko/rancher-hello-world:latest  
-    # - name: Upload Image Tags
-    #   uses: actions/upload-artifact@v2.2.2
-    #   with:
-    #     name: image_tags
-    #     path: ${{ github.workspace }}/IMAGE_TAG        
-    outputs:
-     image_tag: ${{ env.IMAGE_TAG }}
+    - name: Upload Image Tags
+      uses: actions/upload-artifact@v2.2.2
+      with:
+        name: image_tags
+        path: ${{ github.workspace }}/IMAGE_TAG        
+    # outputs:
+    #  image_tag: ${{ env.IMAGE_TAG }}
  
  
   Deploy_To_Dev:
@@ -46,6 +46,13 @@ jobs:
       needs: Build_Push_Image
       environment: dev
       steps:
+      - name: Download Image Tags
+        uses: dawidd6/action-download-artifact@v2
+        with:
+          name: image_tags
+          # workflow: ci.yml
+          # run_id: ${{ github.event.workflow_run.id}}
+          path: ${{ github.workspace }}
       - name: Read Image Tags
         run: |
           echo "IMAGE_TAG=$(cat ${{ github.workspace }}/IMAGE_TAG)" >> $GITHUB_ENV          
