--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -27,6 +27,7 @@ jobs:
       id: generate_image_tag
       run: |
           IMAGE_TAG=${{ env.SEM_VER }}-${{ github.run_number }}
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV     
           echo "::set-output name=image_tag::$IMAGE_TAG"
     - name: Build and Push to Docker Hub
       uses: docker/build-push-action@v2
@@ -53,19 +54,19 @@ jobs:
           echo $IMAGE_TAG
           echo ${{ needs.Build_Push_Image.outputs.image_tag }}          
 
-  Deploy_To_Prod_Zarf:
-      runs-on: ubuntu-latest
-      needs: Deploy_To_Dev
-      environment: prod
-      steps:
-      - name: Read Image Tags
-        run: |
-          echo "IMAGE_TAG=$(cat ${{ github.workspace }}/IMAGE_TAG)" >> $GITHUB_ENV
-          echo $IMAGE_TAG 
+  # Deploy_To_Prod_Zarf:
+  #     runs-on: ubuntu-latest
+  #     needs: Deploy_To_Dev
+  #     environment: prod
+  #     steps:
+  #     - name: Read Image Tags
+  #       run: |
+  #         echo "IMAGE_TAG=$(cat ${{ github.workspace }}/IMAGE_TAG)" >> $GITHUB_ENV
+  #         echo $IMAGE_TAG 
 
-      - name: Prepare a package for Zarf 
-        run: |
-          echo $IMAGE_TAG 
+  #     - name: Prepare a package for Zarf 
+  #       run: |
+  #         echo $IMAGE_TAG 
 
     # - name: Get Release Number
     #   run: |
