--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -56,8 +56,10 @@ jobs:
           echo ${{ needs.Build_Push_Image.outputs.image_tag }}          
       - name: Generaate Manifests
         run: |
-          .github/workflows/utils/generate-manifests.sh ${{ github.workspace }}/helm gen_manifests
-
+          ${{ github.workspace }}/.github/workflows/utils/generate-manifests.sh ${{ github.workspace }}/helm gen_manifests
+      # - name: Create PR
+      #   run: |        
+      #     .github/workflows/utils//create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b ${{ secrets.MANIFESTS_BRANCH }} -i ${{ github.event.workflow_run.id}} -t ${{ secrets.MANIFESTS_PAT }} -e ${{ secrets.ENVIRONMENT_NAME }}
 
   # Deploy_To_Prod_Zarf:
   #     runs-on: ubuntu-latest
