--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -44,6 +44,8 @@ jobs:
       runs-on: ubuntu-latest
       needs: Build_Push_Image
       environment: dev            
+      env:
+        ENVIRONMENT_NAME: development
       steps:
       - name: Checkout Source
         uses: actions/checkout@v2.3.4
@@ -62,7 +64,7 @@ jobs:
           .github/workflows/utils/generate-manifests.sh ${{ github.workspace }}/helm gen_manifests
       # - name: Create PR
       #   run: |        
-      #     .github/workflows/utils//create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b ${{ secrets.MANIFESTS_BRANCH }} -i ${{ github.event.workflow_run.id}} -t ${{ secrets.MANIFESTS_PAT }} -e ${{ secrets.ENVIRONMENT_NAME }}
+      #     .github/workflows/utils//create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b ${{ secrets.MANIFESTS_BRANCH }} -i ${{ github.event.workflow_run.id}} -t ${{ secrets.PAT }} -e ${{ env.ENVIRONMENT_NAME }}
 
   # Deploy_To_Prod_Zarf:
   #     runs-on: ubuntu-latest
