--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -53,12 +53,6 @@ jobs:
         run: |
           IMAGE_TAG=${{ needs.Build_Push_Image.outputs.image_tag }}
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          env      
-      - name: Echo Image Tags
-        run: |
-          echo ${{ env.IMAGE_TAG }} 
-          echo $IMAGE_TAG
-          echo ${{ needs.Build_Push_Image.outputs.image_tag }}          
       - name: Generaate Manifests
         run: |
           .github/workflows/utils/generate-manifests.sh ${{ github.workspace }}/helm gen_manifests
@@ -66,7 +60,7 @@ jobs:
         run: |        
           .github/workflows/utils//create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b ${{ secrets.MANIFESTS_BRANCH }} -i ${{ github.run_number }} -t ${{ secrets.PAT }} -e ${{ env.ENVIRONMENT_NAME }}          
 
-  Deploy_To_Prod:
+  Genrate_Manifests_for_Zarf:
       runs-on: ubuntu-latest
       needs: [Build_Push_Image, Deploy_To_Dev]
       environment: prod            
@@ -77,14 +71,8 @@ jobs:
         uses: actions/checkout@v2.3.4
       - name: Read Image Tags
         run: |
-          IMAGE_TAG=${{ needs.Build_Push_Image.outputs.image_tag }}
+          IMAGE_TAG=zarf
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
-          env      
-      - name: Echo Image Tags
-        run: |
-          echo ${{ env.IMAGE_TAG }} 
-          echo $IMAGE_TAG
-          echo ${{ needs.Build_Push_Image.outputs.image_tag }}          
       - name: Generaate Manifests
         run: |
           .github/workflows/utils/generate-manifests.sh ${{ github.workspace }}/helm gen_manifests
@@ -94,7 +82,7 @@ jobs:
 
   Package_Zarf:
       runs-on: ubuntu-latest
-      needs: [Deploy_To_Prod]
+      needs: [Genrate_Manifests_for_Zarf]
       environment: zarf            
       steps:
       - name: Update Image Tag
