--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -51,8 +51,10 @@ jobs:
         uses: actions/checkout@v2.3.4
       - name: Read Image Tags
         run: |
-          IMAGE_TAG=${{ needs.Build_Push_Image.outputs.image_tag }}
+          IMAGE_TAG=${{ needs.Build_Push_Image.outputs.image_tag }}          
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+          VERSION=$IMAGE_TAG
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
       - name: Generaate Manifests
         run: |
           .github/workflows/utils/generate-manifests.sh ${{ github.workspace }}/helm gen_manifests
@@ -71,6 +73,8 @@ jobs:
         uses: actions/checkout@v2.3.4
       - name: Read Image Tags
         run: |
+          VERSION=${{ needs.Build_Push_Image.outputs.image_tag }}          
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
           IMAGE_TAG=zarf
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
       - name: Generaate Manifests
