--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -18,7 +18,7 @@ jobs:
     steps:
     - name: Checkout Source
       uses: actions/checkout@v2.3.4
-    - name: Login to DockerHub
+    - name: Login to ghcr
       uses: docker/login-action@v1 
       with:
         registry: ghcr.io
@@ -30,7 +30,7 @@ jobs:
           IMAGE_TAG=${{ env.SEM_VER }}-${{ github.run_number }}
           echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV     
           echo "::set-output name=image_tag::$IMAGE_TAG"
-    - name: Build and Push to Docker Hub
+    - name: Build and Push to ghcr
       uses: docker/build-push-action@v2
       with:
         push: true
@@ -90,6 +90,12 @@ jobs:
       needs: [Build_Push_Image, Genrate_Manifests_for_Zarf]
       environment: zarf            
       steps:
+      - name: Login to ghcr
+        uses: docker/login-action@v1 
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Update Image Tag
         run: |        
           IMAGE_TAG=${{ needs.Build_Push_Image.outputs.image_tag }}
