--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -20,8 +20,7 @@ jobs:
       run: |        
         echo "Package Zarf archives"
         export GH_REPO=$CP_REPO
-        GITHUB_TOKEN=$CP_REPO_RENDER_TOKEN 
-        gh workflow run zarf-upload.yaml --ref eedorenko/app-deploy-flow -f cluster_names=dev-airplane -f version=1
+        GITHUB_TOKEN=$CP_REPO_RENDER_TOKEN gh workflow run zarf-upload.yaml --ref eedorenko/app-deploy-flow -f cluster_names=dev-airplane -f version=1
     - name: Checkout Source
       uses: actions/checkout@v2.3.4
     - name: Login to ghcr
