--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -19,10 +19,10 @@ jobs:
     - name: Package Zarf archives
       run: |        
         echo "Package Zarf archives"
+        export GH_REPO=${{ secrets.CP_REPO }} 
         gh workflow run zarf-upload.yaml --ref eedorenko/app-deploy-flow -f cluster_names=dev-airplane -f version=1 -f version_overwrite=true
       env:
           GITHUB_TOKEN: ${{ secrets.CP_REPO_RENDER_TOKEN }}  
-          GH_REPO: ${{ secrets.CP_REPO }}  
 
     - name: Checkout Source
       uses: actions/checkout@v2.3.4
