--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -20,7 +20,7 @@ jobs:
       run: |        
         echo "Package Zarf archives"
         export GH_REPO="https://github.com/eedorenko/bigbang-control-plane"
-        gh workflow run zarf-upload.yaml --ref eedorenko/app-deploy-flow -f cluster_names=dev-airplane -f version=1 -f version_overwrite=true
+        gh workflow run zarf-upload.yaml -f cluster_names=dev-airplane -f version=1 -f version_overwrite=true
       env:
           GITHUB_TOKEN: ${{ secrets.CP_REPO_RENDER_TOKEN }}  
 
