--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -107,7 +107,7 @@ jobs:
       - name: Package Zarf archives
         run: |        
           echo "Package Zarf archives"
-          gh workflow run zarf-upload.yaml --ref eedorenko/app-deploy-flow -f names=$APP_NAME -f app_workspace=WORKSPACE_NAME -f scope=application -f version=$IMAGE_TAG
+          gh workflow run zarf-upload.yaml --ref eedorenko/app-deploy-flow -f names=$APP_NAME -f app_workspace=$WORKSPACE_NAME -f scope=application -f version=$IMAGE_TAG
         env:
             GITHUB_TOKEN: ${{ secrets.CP_REPO_RENDER_TOKEN }}  
             GH_REPO: ${{ secrets.CP_REPO }}
