--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -101,6 +101,7 @@ jobs:
       - name: Update Image Tag
         run: |        
           IMAGE_TAG=${{ needs.Build_Push_Image.outputs.image_tag }}
+          echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
           docker pull $IMAGE_NAME:$IMAGE_TAG
           docker tag $IMAGE_NAME:$IMAGE_TAG $IMAGE_NAME:zarf
           docker push $IMAGE_NAME:zarf
