--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -85,7 +85,8 @@ jobs:
           .github/workflows/utils/generate-manifests.sh ${{ github.workspace }}/helm gen_manifests
       - name: Create PR
         run: |        
-          .github/workflows/utils//create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b ${{ secrets.MANIFESTS_BRANCH }} -i ${{ github.run_number }} -t ${{ secrets.PAT }} -e ${{ env.ENVIRONMENT_NAME }}          
+          .github/workflows/utils//create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b ${{ secrets.MANIFESTS_BRANCH }} -i ${{ github.run_number }} -t ${{ secrets.PAT }} -e ${{ env.ENVIRONMENT_NAME }} -m Y         
+
 
   Package_Zarf:
       runs-on: ubuntu-latest
