--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -3,7 +3,7 @@ name: cicd
 on:
   push:
     branches:
-      - eedorenko/app-deploy-flow
+      - main
     paths-ignore:
       - 'app.yaml'
 
@@ -13,8 +13,8 @@ permissions:
 env:
   SEM_VER: 0.0.1
   APP_NAME: rancher-hello-world
-  WORKSPACE_NAME: kaizen
-  IMAGE_NAME: ghcr.io/eedorenko/rancher-hello-world
+  WORKSPACE_NAME: coral-applications 
+  IMAGE_NAME: ${{ secrets.IMAGE_NAME }} 
 
 jobs:
   Build_Push_Image:
@@ -39,7 +39,7 @@ jobs:
       with:
         push: true
         context: .
-        tags: ghcr.io/eedorenko/rancher-hello-world:${{ env.IMAGE_TAG }}, ghcr.io/eedorenko/rancher-hello-world:latest  
+        tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}, ${{ env.IMAGE_NAME }}:latest  
     outputs:
         image_tag: ${{ steps.generate_image_tag.outputs.image_tag }}
 
@@ -65,7 +65,7 @@ jobs:
           .github/workflows/utils/generate-manifests.sh ${{ github.workspace }}/helm gen_manifests
       - name: Create PR
         run: |        
-          .github/workflows/utils//create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b ${{ secrets.MANIFESTS_BRANCH }} -i ${{ github.run_number }} -t ${{ secrets.PAT }} -e ${{ env.ENVIRONMENT_NAME }} -m Y         
+          .github/workflows/utils//create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b dev -i ${{ github.run_number }} -t ${{ secrets.MANIFESTS_TOKEN }} -e ${{ env.ENVIRONMENT_NAME }} -m Y         
 
   Genrate_Manifests_for_Zarf:
       runs-on: ubuntu-latest
@@ -87,7 +87,7 @@ jobs:
           .github/workflows/utils/generate-manifests.sh ${{ github.workspace }}/helm gen_manifests
       - name: Create PR
         run: |        
-          .github/workflows/utils//create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b ${{ secrets.MANIFESTS_BRANCH }} -i ${{ github.run_number }} -t ${{ secrets.PAT }} -e ${{ env.ENVIRONMENT_NAME }}         
+          .github/workflows/utils//create-pr.sh -s ${{ github.workspace }}/gen_manifests -d ${{ secrets.MANIFESTS_FOLDER }} -r ${{ secrets.MANIFESTS_REPO }} -b prod -i ${{ github.run_number }} -t ${{ secrets.MANIFESTS_TOKEN }} -e ${{ env.ENVIRONMENT_NAME }}         
 
 
   Package_Zarf:
