--- a/app.yaml
+++ b/app.yaml
@@ -7,7 +7,7 @@ deployments:
       repository: https://github.com/kaizentm/gitops-manifests
       branch: dev
       folder: rancher-hello-world
-      zarf_image: ghcr.io/eedorenko/rancher-hello-world:zarf
+      zarf_image: [IMAGE_NAME:]:zarf
   production:
     target: production
     clusters: 1
@@ -15,6 +15,6 @@ deployments:
       repository: https://github.com/kaizentm/gitops-manifests
       branch: prod
       folder: rancher-hello-world
-      zarf_image: ghcr.io/eedorenko/rancher-hello-world:zarf
+      zarf_image: [IMAGE_NAME]:zarf
 
-      
+
